Complete backend assessment