@@ -1,29 +1,25 @@
 package com.example.store.controller;
 
+import com.example.store.dto.CustomerDTO;
 import com.example.store.entity.Customer;
-import com.example.store.mapper.CustomerMapper;
-import com.example.store.repository.CustomerRepository;
+import com.example.store.service.CustomerService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.context.annotation.ComponentScan;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
 import java.util.List;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(CustomerController.class)
-@ComponentScan(basePackageClasses = CustomerMapper.class)
 class CustomerControllerTests {
 
     @Autowired
@@ -33,20 +29,26 @@ class CustomerControllerTests {
     private ObjectMapper objectMapper;
 
     @MockitoBean
-    private CustomerRepository customerRepository;
+    private CustomerService customerService;
 
     private Customer customer;
+    private CustomerDTO customerDTO;
 
     @BeforeEach
     void setUp() {
         customer = new Customer();
         customer.setName("John Doe");
         customer.setId(1L);
+
+        customerDTO = new CustomerDTO();
+        customerDTO.setName("John Doe");
+        customerDTO.setId(1L);
     }
 
     @Test
     void testCreateCustomer() throws Exception {
-        when(customerRepository.save(customer)).thenReturn(customer);
+        when(customerService.createCustomer(org.mockito.ArgumentMatchers.any(Customer.class)))
+                .thenReturn(customerDTO);
 
         mockMvc.perform(post("/customer")
                         .contentType(MediaType.APPLICATION_JSON)
@@ -57,18 +59,16 @@ class CustomerControllerTests {
 
     @Test
     void testGetAllCustomers() throws Exception {
-        when(customerRepository.findAll()).thenReturn(List.of(customer));
+        when(customerService.getCustomers(null)).thenReturn(List.of(customerDTO));
 
         mockMvc.perform(get("/customer"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$..name").value("John Doe"));
-        ;
+                .andExpect(jsonPath("$[0].name").value("John Doe"));
     }
 
     @Test
     void testSearchCustomersByName() throws Exception {
-        when(customerRepository.findByNameContainingIgnoreCase("Joh"))
-                .thenReturn(List.of(customer));
+        when(customerService.getCustomers("Joh")).thenReturn(List.of(customerDTO));
 
         mockMvc.perform(get("/customer").param("query", "Joh"))
                 .andExpect(status().isOk())
@@ -78,8 +78,7 @@ class CustomerControllerTests {
 
     @Test
     void testSearchCustomersCaseInsensitive() throws Exception {
-        when(customerRepository.findByNameContainingIgnoreCase("jOhN"))
-                .thenReturn(List.of(customer));
+        when(customerService.getCustomers("jOhN")).thenReturn(List.of(customerDTO));
 
         mockMvc.perform(get("/customer").param("query", "jOhN"))
                 .andExpect(status().isOk())
@@ -88,8 +87,7 @@ class CustomerControllerTests {
 
     @Test
     void testSearchCustomersNoMatches() throws Exception {
-        when(customerRepository.findByNameContainingIgnoreCase("xyz"))
-                .thenReturn(Collections.emptyList());
+        when(customerService.getCustomers("xyz")).thenReturn(List.of());
 
         mockMvc.perform(get("/customer").param("query", "xyz"))
                 .andExpect(status().isOk())
